# 2025-Federal-Agency-AI-Use-Case-Inventory

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
Reporting Instructions/: Reporting Instructions.md
data/clean/: 2023_consolidated_ai_inventory_raw.csv  2024_consolidated_ai_inventory_raw.csv  2024_consolidated_ai_inventory_raw.xls  2024_consolidated_ai_inventory_raw_v2.csv  2024_consolidated_ai_inventory_raw_v2.xls  2025_consolidated_ai_inventory.csv  combined_2024_2025_ai_inventory.csv
data/clean/summary/: by_stage.csv  by_stage_comparison.csv
data/raw/: agencies.csv  missing_agencies_urls.csv
data/raw/commodity-futures-trading-commission/: CFTC2026-AIusecaseinventory.csv
data/raw/department-of-agriculture/: ai_inventory.csv
data/raw/department-of-commerce/: Artificial-Intelligence-Use-Case-Inventory-FY25.xlsx
data/raw/department-of-education/: ai-inventory-2025-113183.xlsx
data/raw/department-of-energy/: DOE 2025 AI Use Case Inventory_PublicReporting.xlsx
data/raw/department-of-health-and-human-services/: hhs-ai-use-case-inventory-fy25.csv
data/raw/department-of-homeland-security/: 2025_0128_ocio-dhs-ai-use-case-inventory.xlsx
data/raw/department-of-housing-and-urban-development/: HUD-2025-AI-Use-Case-Inventory.xlsx
data/raw/department-of-justice/: 2025 DOJ AI Use Case Inventory_downloadable.xlsx
data/raw/department-of-labor/: AI_Use_Cases_Public_reporting-20260128.csv
data/raw/department-of-transportation/: rows.csv
scripts/: analyze_stages.py  combine_years.py  consolidate_inventories.py  download_missing_files.py
(+21 files in other folders)
