[project]
name = "federal-ai-use-case-inventory"
version = "0.1.0"
description = "Consolidates AI use case inventories from U.S. Federal agencies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
]

[tool.uv]
package = false
